<resources>
    <string name="app_name">MyFarmUg</string>
    <string-array name="district">
        <item>Select your home district</item>
        <item>Bushenyi</item>
        <item>Sheema</item>
        <item>Rubirizi</item>
        <item>Mitooma</item>
        <item>Mbarara</item>
        <item>Ntungamao</item>
        <item>Buhweju</item>
        <item>Masaka</item>
        <item>Kabale</item>
        <item>Rukungiri</item>
    </string-array>
    <string-array name="period">
        <item>less than a year</item>
        <item>1 year</item>
        <item>2 years</item>
        <item>3 years</item>
        <item>4 years</item>
        <item>5 years</item>
        <item>6 years</item>
        <item>7 years</item>
        <item>8 years</item>
        <item>9 years</item>
        <item>10 and above years</item>
    </string-array>
    <string name="beans">
       Beans Farming tips\n
        \n
        PLANTING\n
        \n
        Propagation is by seeds. it is advisable to use certified seeds or those that are disease free. Wrinkled, damaged and diseased seeds should not be planted.\n
        \n
        Planting should be done at onset of the rains if production is rain fed. Delay in sowing may lead to crop failure or reduced yeild.\n
        \n
        Seeds are planted at a spacing of 40*15cm (2seeds per hill) 0r 30*15cm(1seed per hill), at a depth of 1-2 inches.\n
        \n
        The crop can be intercropped with others like maize.\n
        \n
        Seeds germinate within 4-7 days, depending on the variety and enviromental factors.\n
        \n
        NB; Do no plant beans where soil Nitrogen is too high or whre green manure crops wre gron. this is because, the crops will produce green foliage with very fer benas.\n
        \n
        ATTACKS and CONTROLS\n
        \n

        1. Alnernaria leafe spot.\n
        \n
        Plants in nitrogen and potassium deficients soils are more susceptible\n
        Plant beans in fertile soils.
        \n
        2. Anthranose.\n
        Disease tranmitted throug infected seed.\n
        \n
        Remove crop debris from farm.\n
        \n
        Plant resistant varieties\n
        \n
        Use certified disease free seed and lastly avoid sprinkler irrigation, water plants at base.\n
        \n
        3. Bacteria Blight\n
        \n
        Disease can be introduced by contaminated seed.\n
        \n
        Plant resistant varieties.\n
        \n
        Treat seeds with an appropriate antibiotics
    </string>
    <string name="tomat">

        Tree Tomato Farming\n
        \n
        Ecological Requirements\n
        \n
        Tree tomatoes prefer subtriopical climate.\n
        \n
        For vigorous growth, they require well-drained fertile soil which is rich in organic matter. The soil must be permeable since the plant are not tolerant to water-logging. \n
         \n
        Tree tomatoes grow naturally on soils with a pH of 5 to 8.5 and do not tolerate tightly composed soil. \n
         \n
        Although they can be planted under irrigation, ranfall between 600 and 4000mm is suitable. The crop cannot survive in areas with prolonged drought and muat have ample
        water during the dry season. Application of mulch retain moisture in a tree tomato platation and also reduce weed groth. \n
         \n
        Annual temperature betwee 15 and 20^0C are ideal for tree tomato production.
        It is intolerant to frost(below - 2^0 c) and drought stress \n
         \n
        Tree tomatoes grow well in alititude of between 1,500m to 3,000m above the sea level. \n
         \n
        FIELD OPERATIONS \n
         \n
        Propagation of tree tomato is by seeds or cuttins. However, the easiest way to grow tomato is through seedlings. \n
         \n
        Seedlings first develop straight, about 1.5 to 8.5 m tall trunks, before they branch out, while cuttings develop into shoter bushey plants
        with low- lying branches. \n
         \n
        Selection of planting site is also very impartant. \n
         \n
        PLANTING \n
         \n
        Seeds should be treated against soil-borne pests, soil-borne fungul infections and seed dormancy. This is achieved through drenching nursery bed.
         \n
        The distance from one plant to the next should be 4feet and sapce between one row and the next should be 5 feet. \n
         \n
        Cuttings should only be got from plants which are 1-2 years old with a thickness of 1.5 to 2.5 cm and a lenth of 45 to 75 cm. They are sown directly at a spacing of 3x3m. \n
         \n
        Plants grown from cuttings branch out earlier and results in more shrub-like plants that are more suitable for exposeed sites.
        They should not be allowed to bear the first year. \n
         \n
        Weeding \n
         \n
        It is essential to keep the fields free from weeds. This is because weeds compete for groth factors like nutrients, space, water, sunlight as well as harboring pathogens and thetse greatly affect performance. \n
         \n
        MUlching. \n
         \n
        This has several benefits to the crop, eg. cnservation of moisture, suppresion of weed groth, nutrient supply and improvement of soil structure
        and water infiltration, checking of soil erosion and topsoil temperature as well as reduction of pests incidence. \n
         \n
        Watering \n
         \n
        To maximize and stabilize production, water and nutrients inputs should be provided when needed. The plants need a continuous supply of water due to their shallow root system. Water stress results in a decrease in plant growth and production. \n
         \n
        Pruning \n
         \n
        When the tree is about 1 to 1.5 M in height, it is advisable to cut the roots on one side and lean the tree to the other (in the direction of the midday sun
         at about 30 to 45 degrees).
         Pruning helps to control fruit size, plant size and harvest  date.
        It allows fruiting branches to grow all the trunk rather than just at top. \n
         \n

    </string>
    <string name="myfarm">MyFarmUg</string>
    <string name="Login">Login</string>
    <string name="register">Register Here with MyFarmUg</string>
    <string name="welcome">Welcome to </string>
    <string name="solutions">MyFarmUg gives you the perfect farming solutions</string>
    <string name="FarmingTips">Farming Tips</string>
    <string name="Update">Update Profile</string>
    <string name="Location">Location</string>
</resources>