<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/teal_700"
    tools:context=".Home">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/logout"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="-36dp"
        android:layout_marginRight="-36dp"
        android:text="@string/welcome"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="30sp"
        android:textStyle="bold|italic" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/"
        android:id="@+id/myfarm"
        android:layout_below="@+id/welcome"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="30sp"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/logout"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="-9dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="24dp"
        android:text="Logout"
        android:drawableTop="@drawable/logout"
        android:onClick="Log_in"/>
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/my"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myfarm"
        android:text="@string/solutions"
        android:textSize="25dp"
        />

    <TextView
        android:id="@+id/update"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/my"
        android:layout_marginTop="32dp"
        android:background="@color/cardview_light_background"
        android:drawableLeft="@drawable/person"
        android:text="@string/Update"
        android:textSize="25dp"
        android:onClick="update"/>

    <TextView
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/update"
        android:layout_marginTop="30dp"
        android:background="@color/cardview_light_background"
        android:drawableLeft="@drawable/location"
        android:text="@string/Location"
        android:textAlignment="gravity"
        android:textSize="25dp"
        android:onClick="location"/>

    <TextView
        android:id="@+id/weather"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/location"
        android:layout_marginTop="36dp"
        android:background="@color/cardview_light_background"
        android:drawableLeft="@drawable/sunny"
        android:text="Weather"
        android:textSize="25dp"
        android:onClick="weather"/>

    <TextView
        android:id="@+id/tips"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/weather"
        android:layout_marginTop="41dp"
        android:background="@color/cardview_light_background"
        android:drawableLeft="@drawable/fact"
        android:text="@string/FarmingTips"
        android:textSize="25dp"
        android:onClick="tips"/>

    <TextView
        android:id="@+id/chat"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/tips"
        android:layout_marginTop="44dp"
        android:background="@color/cardview_light_background"
        android:drawableLeft="@drawable/chat"
        android:text="Chat"
        android:textSize="25dp"
        android:onClick="Chat"/>

</RelativeLayout>
