<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/teal_700"
    tools:context=".Log_in">
    <TextView
        android:id="@+id/myfarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
        android:text="@string/myfarm"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="30dp"
        android:textStyle="bold|italic"/>
    <ImageView
        android:layout_below="@+id/myfarm"
        android:layout_width="match_parent"
        android:id="@+id/imageLogo"
        android:src="@drawable/farm"
        android:layout_marginVertical="10dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_height="wrap_content"/>
    <EditText
        android:layout_width="match_parent"
        android:id="@+id/email"
        android:drawableRight="@drawable/phone"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageLogo"
        android:layout_marginVertical="10dp"
        android:hint="Email"/>
    <EditText
        android:id="@+id/password"
        android:drawableRight="@drawable/lock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:inputType="textPassword"
        android:layout_marginVertical="10dp"
        android:hint="password"/>

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:text="@string/Login" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signUp"
        android:layout_below="@+id/login"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:textStyle="bold|italic"/>


</RelativeLayout>